Add diffs to profiles page